장소 모자를 시 장소추가 메소드(String 기준)